[package]
name = "tssdkg-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Secret sharing
vsss-rs = "4.0"

# Elliptic curve cryptography
k256 = { version = "0.13", features = ["arithmetic"] }

# Randomness
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Memory safety for keys
zeroize = { version = "1.7", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web + WebSocket server
axum = { version = "0.7", features = ["ws"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
sha2 = "0.10"
hmac = "0.12"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }